Adding more java stuff and fixing small issue in login flow